--- a/css/theme-default.css
+++ b/css/theme-default.css
@@ -50,11 +50,20 @@ a:visited { color:#eee; }
 	background: #222528 url("../img/background.png") repeat scroll 0% 0%;
 }
 
-#link-menu li a.selected, #room-menu-items a.selected {  border-bottom:2px solid #0099ff !important; }
+#link-menu li a.selected, #room-menu-items a.selected {
+	## border-bottom:2px solid #0099ff !important; 
+	box-shadow: 0 3px 0px #0099ff;
+}
 
-#link-menu li.selected img {  border-right:3px solid #0099ff !important;}
+#link-menu li.selected img {  
+	## border-right:3px solid #0099ff !important; 
+	box-shadow: 3px 0px 0px #0099ff;
+}
 
-#room-menu tr.selected td:first-of-type {  border-left:3px solid #0099ff !important;}
+#room-menu tr.selected td:first-of-type {  
+	## border-left:3px solid #0099ff !important;
+	box-shadow: -3px 0px 0px #0099ff;
+}
 
 #room-menu tr.selected td:first-of-type { color:#0099ff !important; }
 
